🔄 Updated IoT data simulation script

--- a/notebooks/Smart_Logistics_Simulation.ipynb
+++ b/notebooks/Smart_Logistics_Simulation.ipynb
@@ -41,7 +41,7 @@
    "id": "429e602c",
    "metadata": {},
    "source": [
-    "We’ll store our simulated data in a subfolder called `data/`."
+    "Create a folder to store the output data"
    ]
   },
   {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a297ebde",
    "metadata": {},
    "outputs": [],
@@ -378,6 +378,23 @@
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1c559b9",
+   "metadata": {},
+   "source": [
+    "This dataset simulates a smart logistics system using IoT sensor inputs and shipment tracking logic.\n",
+    "You can now use this data for:\n",
+    "\n",
+    "• Visualization (e.g., delays, alert rates)\n",
+    "\n",
+    "• Machine learning experiments\n",
+    "\n",
+    "• Blockchain or smart contract storage\n",
+    "\n",
+    "• Business analysis of delivery performance and IoT alerting"
    ]
   }
  ],
