🗄️ Add Week 4 Milestone 1 blockchain

--- a/notebooks/milestone1_blockchain_ledger.ipynb
+++ b/notebooks/milestone1_blockchain_ledger.ipynb
@@ -25,17 +25,25 @@
    "source": [
     "1. **Open Jupyter Notebook**  \n",
     "2. **Verify Ganache** is running (Desktop App “Quickstart Ethereum” or `ganache-cli`).  \n",
-    "3. **Check your RPC port** (default is `7545` in Ganache Desktop).\n",
+    "3. **Check RPC port** (default is `7545` in Ganache Desktop).\n",
     "\n",
     "Below we’ll connect Python → Ganache → our IoTDataStorage contract."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "fef8ead9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Connected to Ganache successfully!\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 1: imports & connection\n",
     "from web3 import Web3\n",
@@ -64,10 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "19897053",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "▶️ Using account 0x52F44946840D06E788D2785B3FfEbDf36AacA355\n",
+      "✅ Loaded contract at 0xF4B97C9C61c2EcEb30780c5750EB95694A703B88\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 2: load ABI + contract\n",
     "abi_path = os.path.join(\"..\", \"artifacts\", \"IoTDataStorageABI.json\")\n",
@@ -98,10 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "0bab4702",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔢 Total stored entries on‐chain: 1\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 3: read-only call\n",
     "total = contract.functions.getTotalRecords().call()\n",
@@ -120,10 +145,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8c33957b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Dummy data tx mined: 584bc5bf568a9df5e419668cf65269aebf302b988397da7d922ed254d6dbe499\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 4: store dummy entry\n",
     "tx = contract.functions.storeData(\n",
@@ -152,16 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "90a4d6dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔢 New total entries: 1\n",
+      "📦 First stored record: [1748075473, 'TEST001', 'Temperature', '22.5°C']\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 5: verify storage\n",
     "new_total = contract.functions.getTotalRecords().call()\n",
     "print(f\"🔢 New total entries: {new_total}\")\n",
     "\n",
-    "first = contract.functions.getRecord(1).call()\n",
+    "first = contract.functions.getRecord(0).call()\n",
     "print(\"📦 First stored record:\", first)"
    ]
   }
